data/all_generated_tests/raw_wast_tests/br_UnreachableCodeExecution_386.wast
;; 7. **Test 7: Loop with Forward Branch to Unreachable**    - Establish a `loop` that includes a forward `br` instruction targeting a block label following the loop and insert an `unreachable` in the loop.    - Ensures that the correct target label is addressed without erroneously encountering the `unreachable`.

(assert_invalid
  (module (func $loop-with-forward-br-to-unreachable
    (loop (br 1)) (unreachable) (block (nop))
  ))
  "unknown label"
)